# the-heck

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: main.rs  shell_history.rs
the_heck/: Cargo.toml  README.md
the_heck/src/: lib.rs  lib_backup.rs  main.rs  rules.rs  shell_history.rs
