[package]
name = "the_heck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
rev_buf_reader = "0.3.0"
clap = {version = "4.1.4", features = ["derive"]}
fst = {version = "0.4", features = ["levenshtein"]}