[package]
name = "the_heck"
description = "A command line corrector inspired by thefuck"
author = "Elizabeth Oda"
version = "0.1.2"
readme = "README.md"
repository = "https://github.com/elizabeth-oda/the-heck"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
rev_buf_reader = "0.3.0"
fst = {version = "0.4", features = ["levenshtein"]}
dialoguer = "0.10.3"

[[bin]]
name = "heck"
path = "src/main.rs"